# microservice-system

./: .env.example  .env.postgres.example  .env.rabbitmq.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
microservices/reverse_service/: Dockerfile  main.py  reverse_settings.py  services.py
microservices/reverse_service/reverse_src/: dependencies.py  handlers.py  message_schemas.py  services.py
microservices/reverse_service/src/: handlers.py  message_schemas.py
microservices/user_service/: Dockerfile  alembic.ini  consumer.py  main.py  publisher.py  settings.py  test_main.py
microservices/user_service/alembic/: env.py
microservices/user_service/alembic/versions/: 1_create_uuid_extension.py  f72fdc451d39_init.py
microservices/user_service/src/: __init__.py
microservices/user_service/src/api/: container.py  dependencies.py
microservices/user_service/src/api/routers/: __init__.py  health.py  string.py
microservices/user_service/src/database/: __init__.py  connection.py  unit_of_work.py
microservices/user_service/src/database/schemas/: __init__.py  string.py
microservices/user_service/src/domain/: __init__.py  application_enums.py  exceptions.py  models.py
microservices/user_service/src/eventbus/: connection.py  dependencies.py  handlers.py  schemas.py
microservices/user_service/src/repository/: __init__.py  string_repositories.py
microservices/user_service/src/schemas/: __init__.py  string_schemas.py
microservices/user_service/src/services/: __init__.py  string_services.py
